Added SJF algorithm